--- a/src/locales/arabic/translation.json
+++ b/src/locales/arabic/translation.json
@@ -1,6 +1,6 @@
 {
     "home":"الصفحة الرئيسية",
     "company":"شركة",
-    "our service":"خدمتنا",
+    "our services":"خدمتنا",
     "careers":"وظائف"
 }
