--- a/src/locales/english/translation.json
+++ b/src/locales/english/translation.json
@@ -1,6 +1,6 @@
 {
     "home":"home",
     "company":"company",
-    "our service":"our service",
+    "our services":"our services",
     "careers":"careers"
 }
